changed net.consler.librelauncherlib.download to net.consler.librelauncherlib.install